fixed checkbox alignment problem

--- a/less/_checkboxes.less
+++ b/less/_checkboxes.less
@@ -5,6 +5,7 @@
   transform: translateZ(0); // Force 3d rendering
   label {
     cursor: pointer;
+    padding-left: 0; // Reset for Bootstrap rule
   }
 
   // Hide native checkbox
